Avoid showing some scrollbars

--- a/src/skin/style/gcprefwindow.css
+++ b/src/skin/style/gcprefwindow.css
@@ -3,8 +3,10 @@ description {
   border: 1px solid #999999;
   padding: 5px !important;
   font-size: 1em;
-  height: 5em;
+  min-height: 6em;
+  max-height: 6em;
   margin: 0px 8px 8px;
+  overflow: hidden;
 }
 
 #guiconfig-preference-search textbox {
